applications/apicurio-studio/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apicurio-studio
    component: apicurio-studio-api
  name: apicurio-studio-api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: apicurio-studio-api
  template:
    metadata:
      labels:
        app: apicurio-studio
        component: apicurio-studio-api
    spec:
      containers:
        - image: >-
            quay.io/apicurio/apicurio-studio@sha256:e3a27250774696df6a97749dd748f6b42d9e563f7ee1c87b933140a19c0db562
          name: apicurio-studio-api
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
          env:
            - name: APICURIO_LOG_LEVEL
              value: DEBUG
            - name: QUARKUS_HTTP_ACCESS-LOG_ENABLED
              value: 'true'
            - name: QUARKUS_PROFILE
              value: prod
            - name: QUARKUS_HTTP_CORS_ORIGINS
              value: '*'
            - name: QUARKUS_OIDC_TENANT-ENABLED
              value: 'true'
            - name: QUARKUS.OIDC.TOKEN-PATH
              value: >-
                https://sso.dev.apicur.io/realms/apicurio/protocol/openid-connect/token
            - name: QUARKUS.OIDC.AUTH-SERVER-URL
              value: 'https://sso.dev.apicur.io/realms/apicurio'
            - name: QUARKUS.OIDC.CLIENT-ID
              value: studio-api
            - name: APICURIO_STORAGE_DB_KIND
              value: postgresql
            - name: APICURIO_DATASOURCE_DATABASE
              valueFrom:
                secretKeyRef:
                  name: rds-apicurio-studio-credentials
                  key: database
            - name: APICURIO_DATASOURCE_PORT
              valueFrom:
                secretKeyRef:
                  name: rds-apicurio-studio-credentials
                  key: port
            - name: APICURIO_DATASOURCE_HOST
              valueFrom:
                secretKeyRef:
                  name: rds-apicurio-studio-credentials
                  key: host
            - name: APICURIO_DATASOURCE_URL
              value: >-
                jdbc:postgresql://${APICURIO_DATASOURCE_HOST}:${APICURIO_DATASOURCE_PORT}/${APICURIO_DATASOURCE_DATABASE}
            - name: APICURIO_DATASOURCE_USERNAME
              valueFrom:
                secretKeyRef:
                  name: rds-apicurio-studio-credentials
                  key: user
            - name: APICURIO_DATASOURCE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: rds-apicurio-studio-credentials
                  key: password
            - name: APICURIO_UI_AUTH_OIDC_CLIENT-ID
              value: studio-ui
            - name: APICURIO_UI_AUTH_OIDC_REDIRECT-URI
              value: 'https://studio.dev.apicur.io/'
            - name: APICURIO_UI_OPENAPI_VENDOR-EXTENSIONS_URL
              value: >-
                https://raw.githubusercontent.com/Apicurio/apicurio-studio/main/app/src/main/resources/extensions/vendor-extensions.json
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
            requests:
              cpu: 200m
              memory: 500Mi
          livenessProbe:
            httpGet:
              path: /apis/studio/v1/system/info
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /apis/studio/v1/system/info
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
