applications/apicurio-studio/deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apicurio-studio
    component: apicurio-studio-ui
  name: apicurio-studio-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      component: apicurio-studio-ui
  template:
    metadata:
      labels:
        app: apicurio-studio
        component: apicurio-studio-ui
    spec:
      containers:
        - image: >-
            quay.io/apicurio/apicurio-studio-ui@sha256:ed2d7a01e3d17cdef6406cbfcf8da18178d7f7cc2f295b8df31ea2fe74a621d5
          name: apicurio-studio-ui
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
          env:
            - name: APICURIO_REGISTRY_API_URL
              value: 'https://registry-api.dev.apicur.io/apis/registry/v3'
            - name: APICURIO_AUTH_TYPE
              value: oidc
            - name: APICURIO_AUTH_URL
              value: 'https://sso.dev.apicur.io/realms/apicurio'
            - name: APICURIO_AUTH_CLIENT_ID
              value: studio-ui
            - name: APICURIO_AUTH_REDIRECT_URL
              value: 'https://studio.dev.apicur.io'
            - name: APICURIO_REGISTRY_UI_URL
              value: 'https://registry.dev.apicur.io'
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 250Mi
          livenessProbe:
            httpGet:
              path: /config.js
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /config.js
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
