applications/apicurio-studio/route-ui.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apicurio-studio-ui
  # TODO add the annotation as an overlay patch
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: apicurio-studio
    template: apicurio-studio-ui
spec:
  host: studio.dev.apicur.io
  to:
    kind: Service
    name: apicurio-studio-ui
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
